--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pdfminer.six==20231228
 pdfplumber==0.11.5
 pillow==10.4.0
 pycparser==2.23
-pypdf2==3.0.1
+pypdf==5.1.0
 pypdfium2==4.30.0
 reportlab==4.3.0
 typing-extensions==4.13.2
